# docs/swagger.json
@@ -44,7 +44,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/browse.recreateThumbnailsResponse"
+                            "$ref": "#/definitions/browse.rescanLibraryResponse"
                         }
                     },
                     "500": {
@@ -104,6 +104,24 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/tag.listResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/errors.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/tag/recreate_thumbnails": {
+            "get": {
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/browse.recreateThumbnailsResponse"
                         }
                     },
                     "500": {
